[gd_scene load_steps=6 format=3 uid="uid://c0m0jj5cxlrjs"]

[ext_resource type="PackedScene" uid="uid://t3b47lj1rvy7" path="res://scenes/cubelet.tscn" id="1_r78ou"]
[ext_resource type="Script" path="res://scenes/rotation_planes.gd" id="3_ee6f8"]
[ext_resource type="PackedScene" uid="uid://coqqhipqy4wno" path="res://scenes/rotation_plane.tscn" id="3_wkby6"]
[ext_resource type="Material" uid="uid://dw8skocq4f01f" path="res://materials/rotation_plane.tres" id="4_yeqn5"]
[ext_resource type="Material" uid="uid://dpe6ojv76rv0d" path="res://materials/rotation_plane_highlighted.tres" id="5_031w8"]

[node name="Node3D" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999989, -0.0025962, 0.00393274, 0.000580325, 0.896045, 0.443964, -0.00467653, -0.443956, 0.896036, 0.993628, 2.77785, 4.78344)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0)

[node name="rotation_planes" type="Node3D" parent="." node_paths=PackedStringArray("highlighted_plane")]
script = ExtResource("3_ee6f8")
highlighted_plane = NodePath("bottom_horizontal_plane")
default_material = ExtResource("4_yeqn5")
highlighted_material = ExtResource("5_031w8")

[node name="bottom_horizontal_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, -1.05)

[node name="middle_horizontal_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 1.05, -1.05)

[node name="top_horizontal_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 2.1, -1.05)

[node name="bottom_vertical_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.05, -1.05)

[node name="middle_vertical_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.05, 1.05, -1.05)

[node name="top_vertical_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2.1, 1.05, -1.05)

[node name="bottom_face_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 1.05, 1.05, 0)

[node name="middle_face_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 1.05, 1.05, -1.05)

[node name="top_face_plane" parent="rotation_planes" instance=ExtResource("3_wkby6")]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 1.05, 1.05, -2.1)

[node name="cublets" type="Node3D" parent="."]

[node name="Cubelet" parent="cublets" instance=ExtResource("1_r78ou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, 0)

[node name="Cubelet2" parent="cublets" instance=ExtResource("1_r78ou")]

[node name="Cubelet3" parent="cublets" instance=ExtResource("1_r78ou")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.1, 0, 0)
